Add Jira integration flow
